# IhgedasBlockchain

./: .env  Cargo.toml  README.md
data/blocks/: db  snap.0000000000000554
data/utxos/: db
data/wallets/: db
src/: main.rs
src/cli/: mod.rs
src/contracts/: mod.rs
src/models/: block.rs  blockchain.rs
src/server/: mod.rs
src/transaction/: mod.rs
src/tx/: mod.rs
src/utxoset/: mod.rs
src/wallet/: mod.rs
style/: style.css
templates/: block.html  controller.html  display.html  header.html  index.html  layout.html  login.html  wallet.html
