[package]
name = "blockchain_backend_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.5"
actix-session = { version = "0.9", features = ["cookie-session"] }
cookie = "0.18.1"
tera = "1.19.1"
clap = "4.5.4"
log = "0.4.21"
env_logger = "0.11.3"
lazy_static = "1.4.0"
serde = { version = "1.0.197", features = ["derive"]}
bincode = "1.3.3"
sha2 = "0.10.6"
rust-crypto = "^0.2"
failure = "0.1"
sled = "0.34"
bitcoincash-addr = "0.5.2"
rand = "0.8.5"
merkle-cbt = "0.3.2"
serde_json = "1.0"
dotenv = "0.15.0"
hex = "0.4.3"
